--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load tags %}
 
 
  <!DOCTYPE html>
@@ -27,11 +28,79 @@
 </head>
 <body>
 
+
 <div class="container">
-    
-    {% block content %}{% endblock %}
+
+
+<div class="page-header">
+    <h1>SPQR <small>So Parlare (Quasi) Russo!</small></h1>      
+</div>
+
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-blackboard"></span></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        
+        {% url 'wordview' as wordview_url %}
+        <li class="{% active request wordview_url %}"><a href="{% url 'wordview' %}">Home<span class="sr-only">(current)</span></a></li>
+        
+        {% comment %}
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+        {% endcomment %}
+      </ul>
+      
+      
+      <ul class="nav navbar-nav navbar-right">
+        {% if user.is_authenticated %}
+        <p class="navbar-text"><small class="text-primary">Sei loggato come {{ user.username }}</small></p>
+        
+        <li class="dropdown {% active_search request 'account/' %}">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'password_change' %}">Cambio password</a></li>
+          </ul>
+        </li>
+        
+        {% else %}
+        {% url 'login' as login_url %}
+        <li class="{% active request login_url %}"><a href="{% url 'login' %}">Login</a></li>
+        {% endif %}
+        
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+{% block content %}{% endblock %}
 
 </div>
+
 
 </body>
 </html>
