--- a/templates/base.html
+++ b/templates/base.html
@@ -57,8 +57,10 @@
         {% url 'wordview' as wordview_url %}
         <li class="{% active request wordview_url %}"><a href="{% url 'wordview' %}">Home<span class="sr-only">(current)</span></a></li>
         
+        {% url 'settingsview' as settingsview_url %}
+        <li class="{% active request settingsview_url %}"><a href="{% url 'settingsview' %}">Opzioni</a></li>
+        
         {% comment %}
-        <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -77,7 +79,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-        <p class="navbar-text"><small class="text-primary">Sei loggato come {{ user.username }}</small></p>
+        <li class="navbar-text"><small class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sei loggato come {{ user.username }}</small></li>
         
         <li class="dropdown {% active_search request 'account/' %}">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
