--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
     
-    <script src="{% static 'script.js' %}"></script>
+    {% block scripts %}{% endblock %}
+    
     
     <style>
         .smallcaps {
@@ -23,6 +24,11 @@
         
         .invisible {
             visibility: hidden;
+        }
+        
+        .scrollable {
+            height: 300px;
+            overflow-y: scroll;
         }
     </style>
 </head>
@@ -60,6 +66,11 @@
         {% url 'settingsview' as settingsview_url %}
         <li class="{% active request settingsview_url %}"><a href="{% url 'settingsview' %}">Opzioni</a></li>
         
+        {% if user.is_superuser %}
+        <li><a href="/admin/">Amministrazione</a></li>
+        {% endif %}
+        
+        
         {% comment %}
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -84,8 +95,8 @@
         <li class="dropdown {% active_search request 'account/' %}">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{% url 'logout' %}">Logout</a></li>
             <li><a href="{% url 'password_change' %}">Cambio password</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
           </ul>
         </li>
         
