--- a/templates/word.html
+++ b/templates/word.html
@@ -40,19 +40,33 @@
         </div>
         
         <div data-ng-show="show_italian">
-        <button type="button"
-            class="btn btn-success btn-lg"
-            data-ng-click="getWord()"
-            data-ng-disabled="requesting">
-        Lemma successivo
-        </button>
+            <button type="button"
+                class="btn btn-primary btn-lg"
+                data-ng-click="getWord()"
+                data-ng-disabled="requesting">
+            Lemma successivo
+            </button>
+        </div>
+        
+        <div data-ng-class="{'invisible': !show_italian}" data-ng-cloak>
+            <br />
+            <button type="button"
+                class="btn btn-success btn-lg"
+                data-ng-click="getWord()"
+                data-ng-disabled="requesting">
+            <span class="glyphicon glyphicon-ok"></span>
+            </button>
+            
+            <button type="button"
+                class="btn btn-danger btn-lg"
+                data-ng-click="getWord()"
+                data-ng-disabled="requesting">
+            <span class="glyphicon glyphicon-remove"></span>
+            </button>
         </div>
     </p>
 </div>
 
-<br />
-<br />
-<br />
 <br />
 <br />
 <br />
